--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,36 +1,29 @@
-# This is a basic workflow to help you get started with Actions
-
-    name: CI
-
-    # Controls when the workflow will run
-    on:
-      # Allows you to run this workflow manually from the Actions tab
-      workflow_dispatch:
-
-    # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-    jobs:
-      # This workflow contains a single job called "build"
-      build:
-        # The type of runner that the job will run on
-        runs-on: ubuntu-latest
-        timeout-minutes: 30
-
-        # Steps represent a sequence of tasks that will be executed as part of the job
-        steps:
-          # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-          - uses: actions/checkout@v3
-
-          - name: Set up Python 3.10
-            uses: actions/setup-python@v3
-            with:
-              python-version: "3.10"
-
-          - name: Install dependencies
-            run: |
-              python -m pip install --upgrade pip
-              pip install pipenv
-              pipenv install --system
-              playwright install chromium
-
-          - name: Run tests
-            run: pytest
+name: Playwright Tests
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+jobs:
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Ensure browsers are installed
+      run: python -m playwright install --with-deps
+    - name: Run your tests
+      run: pytest
+#    - uses: actions/upload-artifact@v3
+#      if: always()
+#      with:
+#        name: playwright-traces
+#        path: test-results/
