--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pipenv
+        pipenv install --system
+        playwright install chromium
+
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
     - name: Run your tests
