--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,15 +20,16 @@ jobs:
         pip install pipenv
         pipenv install --system
         playwright install chromium
-
-#        python -m pip install --upgrade pip
-#        pip install -r requirements.txt
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
     - name: Run your tests
       run: pytest
-#    - uses: actions/upload-artifact@v3
-#      if: always()
-#      with:
-#        name: playwright-traces
-#        path: test-results/
+    - name: Report Status
+        if: always()
+        uses: ravsamhq/notify-slack-action@v1
+        with:
+          status: ${{ job.status }}
+          message_format: ${{ secrets.GH_ACTIONS_URL }}
+          notify_when: "success,failure"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
