--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,16 @@ jobs:
       run: python -m playwright install --with-deps
     - name: Run your tests
       run: pytest
+             - name: Allure Report action from marketplace
+             uses: simple-elf/allure-report-action@master
+             if: always()
+        #id: allure-report
+             with:
+               allure_results: reports
+               #gh_pages: gh-pages
+               #allure_report: allure-report
+               allure_history: allure-history
+               keep_reports: 20
 #    - name: Report Status
 #        if: always()
 #        uses: ravsamhq/notify-slack-action@v1
