--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,12 +34,12 @@ jobs:
                #allure_report: allure-report
        allure_history: allure-history
        keep_reports: 20
-#    - name: Report Status
-#        if: always()
-#        uses: ravsamhq/notify-slack-action@v1
-#        with:
-#          status: ${{ job.status }}
-#          message_format: ${{ secrets.GH_ACTIONS_URL }}
-#          notify_when: "success,failure"
-#        env:
-#          SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
+    - name: Report Status
+      if: always()
+      uses: ravsamhq/notify-slack-action@v1
+      with:
+          status: ${{ job.status }}
+          message_format: ${{ secrets.GH_ACTIONS_URL }}
+          notify_when: "success,failure"
+      env:
+          SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
